# ansible-playbooks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.host-setup  README.md  Vagrantfile  activate-venv.sh  ansible-default  ansible.cfg  bootstrap-ansible.sh  bootstrap-config.sh  bootstrap.sh  check.sh  common-desktop.yml  common-devserver.yml  common-minimal-desktop.yml  common.yml  common_vars.yml  docker-base-ubuntu.Dockerfile  docker-base-ubuntu.yml  docker-chromium-browser.Dockerfile  docker-chromium-browser.yml  docker-common.yml  docker-compose-default.yml  docker-compose.yml  flake.nix  secure.yml  show-dependency-tree.py  test.yml  update-dotfiles.sh  user.yml
.github/workflows/: _hetzner-test.yml  ansible-tests.yml  hetzner-janitor.yml  host-setup.yml  rust.yml  vagrant-up.yml  yamllint.yml
.semaphore/: semaphore.yml
e2e-tests/src/: lib.rs
e2e-tests/tests/: exporters.rs
plugins/action/: include_vars_merged.py
roles/apc-ups/handlers/: main.yml
roles/apc-ups/meta/: main.yml
roles/apc-ups/tasks/: configs.yml  main.yml
roles/apparmor/tasks/: configs.yml  packages.yml  services.yml
roles/apt/defaults/: main.yml
src/: README.md  backends.rs  batcher.rs  bundles.rs  config.rs  env.rs  error.rs  executor.rs  lib.rs  main.rs  plan.rs  resource.rs
src/backends/: absent_apt_package.rs  absent_file.rs  apt_package.rs  apt_repo.rs  command.rs  directory.rs  download.rs  file.rs  line_in_file.rs  marker.rs  service.rs  symlink.rs  systemd_unit.rs  user.rs
src/bundles/: apc_ups.rs  apparmor.rs  apt.rs  ca_cert.rs  chrony.rs  common.rs  common_devserver.rs  common_tools.rs  common_tweaks.rs  devserver.rs  docker.rs  et.rs  flatpak.rs  gpg.rs  iptables.rs  libvirtd.rs  locales.rs  nix.rs  node_exporter.rs  nvidia.rs  nvim.rs  pip.rs  smartctl_exporter.rs  snapd.rs  systemd.rs  tailscale.rs  tuxedo.rs  tzdata.rs  ubuntu_devserver.rs  users.rs  virtualbox.rs  yubico.rs
tests/: Cargo.toml  command_backend.rs  directory_backend.rs  file_backend.rs  plan.rs  rustfmt.toml  symlink_backend.rs  user_e2e.rs
tests/src/: lib.rs
tests/tests/: binaries.rs  config_files.rs  pkg_managers.rs  podman.rs  privileges.rs  system_state.rs  systemd_units.rs
(+295 files in other folders)
